[workspace]
members = [
    ".", 
    "examples/*",
    "hab-rs-api-client",
]

[workspace.package]
version = "0.1.0"
license = "MIT"
edition = "2024"
authors = ["DerFetzer <kontakt@derfetzer.de>"]

[package]
name = "hab-rs"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true

[workspace.dependencies]
hab-rs-api-client = { version = "=8.0.0", path = "hab-rs-api-client" }

[dependencies]
async-trait = "0.1.88"
chrono = "0.4.40"
futures-util = "0.3.31"
hab-rs-api-client = { workspace = true, features = ["mockall"] }
reqwest = { version = "0.12.15", features = ["stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde-nested-json = "0.1.3"
serde_json = "1.0.140"
serde_with = "3.12.0"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["rt", "macros"] }
tracing = "0.1.41"

[dev-dependencies]
tracing-test = "0.2.5"
mockall = "0.13.1"

