[package]
name = "minimal"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true

publish = false

[dependencies]
async-trait = "0.1.88"
clap = { version = "4.5.35", features = ["derive"] }
hab-rs = { path = "../../" }
tokio = { version = "1.44.1", features = ["rt", "macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
