[package]
name = "minimal"

version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true

workspace = "../../"
publish = false

[dependencies]
async-trait = "0.1.88"
clap = { version = "4.5.35", features = ["derive"] }
hab-rs = { path = "../../" }
tokio = { version = "1.44.1", features = ["rt", "macros", "test-util"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
hab-rs = { path = "../../", features = ["mockall"] }
mockall = "0.13.1"
serde_json = "1.0.140"
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }
